test/integration/syntax/checkpoint_2_0.pal
{7,11}
{===============================================================================
	line 7: expect error: no program name
	line 11: expect error: constant declearation should not use function
===============================================================================}

program (input,output);	{expect error: no program name}

	const
		i386 = qq();	// error
		
	type
		abc = record
			b : array[1.01..2.22] of integer	//error 
		end;
			
	begin
	end.
